<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              tools:context="com.ucicke.stand.IndividualFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:text="@string/full_power"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:background="@drawable/lists_back"
        android:gravity="center"
        android:hint="@string/unknown"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"
        android:text="@string/normal_voltage"
        android:textSize="24sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:background="@drawable/lists_back"
        android:gravity="center"
        android:hint="@string/unknown"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textSize="24sp"/>

</LinearLayout>
