<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/brightBlue"
              android:orientation="vertical"
              android:padding="2dp"
              tools:context="com.ucicke.stand.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons_back"
        android:padding="1dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/darkGray"
            android:padding="8dp"
            android:text="@string/connection_scheme"
            android:textColor="@android:color/white"
            android:textSize="34sp"/>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/darkBlue"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                tools:text="17-08-17"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/black"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                tools:text="10:39:38"/>
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="96dp"
        android:layout_marginRight="96dp"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/fragment_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        </FrameLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/left_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_back"
            android:text="@string/menu_title"
            android:textColor="@android:color/white"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/right_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_back"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="24sp"/>
    </LinearLayout>

</LinearLayout>

